--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -69,10 +69,16 @@
 						</div>
 						<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
 							<div class="login-option">
-								<a class="cs-color cs-popup-joinus-btn login-popup" data-target="#sign-in" data-toggle="modal" href="#user-register">Login</a> /
-                                    <span><a href="{% url 'accounts:registerUser' %}" class="cs-color cs-popup-joinus-btn login-popup ml-0">Register</a></span><a class="get-start-btn" href="register-restaurant.html">
-									Register
-									Restaurant </a>
+                                {% if user.is_authenticated %}
+                                    <a class="cs-color cs-popup-joinus-btn login-popup" href="{% url 'accounts:myAccount' %}">My account</a>
+                                    <a class="cs-color cs-popup-joinus-btn login-popup text-danger" href="{% url 'accounts:logout' %}">Logout</a>
+                                {% else %}
+                                    <a class="cs-color cs-popup-joinus-btn login-popup" data-target="#sign-in" data-toggle="modal" href="{% url  'accounts:login'%}">Login</a> /
+                                        <span><a href="{% url 'accounts:registerUser' %}" class="cs-color cs-popup-joinus-btn login-popup ml-0">Register</a></span><a class="get-start-btn" href="{% url 'vendor:registerVendor' %}">
+                                        Register
+                                        Restaurant
+                                    </a>
+                                {% endif %}
 							</div>
 						</div>
 					</div>
