--- a/templates/accounts/emails/reset_password_email.html
+++ b/templates/accounts/emails/reset_password_email.html
@@ -10,11 +10,10 @@
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 ">
                     <div class="user-dashboard loader-holder" style="width: 450px; min-height: auto">
                         <div class="user-holder">
-                            <h4 class="text-center" style="margin-bottom: 0;">SIGN IN</h4>
-                            <p class="text-center">Order food from your favorite restaurants.</p>
+                            <h4 class="text-center" style="margin-bottom: 0;">Reset your password</h4>
                             <hr>
                             <div id="restaurant-sets-holder">
-                                <form class="form-fields-set foodbakery-dev-restaurant-form" method="POST" action="{% url 'accounts:login' %}">
+                                <form class="form-fields-set foodbakery-dev-restaurant-form" method="POST" action="{% url 'accounts:reset_password' %}">
                                     {% csrf_token %}
                                     <ul class="register-add-restaurant-tab-container restaurant-information-tab-container">
                                         <li>
@@ -23,14 +22,14 @@
                                                     <div class="row">
                                                         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                                                             <div class="field-holder">
-                                                                <label>Email Address</label>
-                                                                <input type="email" name="email" id="email" placeholder="Enter your email">
+                                                                <label>Password</label>
+                                                                <input type="password" name="password" id="password" placeholder="Set your new password">
                                                             </div>
                                                         </div>
                                                         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                                                             <div class="field-holder">
-                                                                <label>Password</label>
-                                                                <input type="password" name="password" id="password" placeholder="Enter your password">
+                                                                <label>Confirm Password</label>
+                                                                <input type="password" name="confirm_password" id="confirm_password" placeholder="Confirm your new password">
                                                             </div>
                                                         </div>
                                                     </div>
@@ -42,8 +41,7 @@
                                                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                                                     <div class="field-holder">
                                                         <div class="payment-holder">
-                                                            <input type="submit" value="Submit" id="btn-next-restaurant-information" class="bgcolor">
-                                                            <a href="{% url "accounts:forgot_password" %}" class="float-right">Forgot your password ?</a>
+                                                            <input type="submit" value="Reset Password" id="btn-next-restaurant-information" class="bgcolor">
                                                         </div>
                                                     </div>
                                                 </div>
